--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>About me</title>
   </head>
   <body>
+    <p>Question One: Is Hockey the greatest sport?</p>
+    <p>Question Two: Is my favorite color yellow?</P>
+    <p>Question Three: Was I born in the 80s?</p>
+    <p>Question Four: If you do not finish first does that mean that you're last?</p>
+    <p>Question Five: It is friday night, everyone is out at the bar, do I join them?</p>
 
   </body>
 </html>
