--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>About me</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+    <h1>How Well Do You Know Me?</h1>
     <p>Question One: Is Hockey the greatest sport?</p>
-    <p>Question Two: Is my favorite color yellow?</P>
+    <p >Question Two: Is my favorite color yellow?</P>
     <p>Question Three: Was I born in the 80s?</p>
     <p>Question Four: If you do not finish first does that mean that you're last?</p>
     <p>Question Five: It is friday night, everyone is out at the bar, do I join them?</p>
   </body>
+<!-- *  <script src="app.js"></script> -->
 </html>
