--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
     <p>Question Four: If you do not finish first does that mean that you're last?</p>
     <p>Question Five: It is friday night, everyone is out at the bar, do I join them?</p>
   </body>
-<!-- *  <script src="app.js"></script> -->
+<script src="app.js"></script> -->
 </html>
