a lot to commit right here forgot to commit anything since i started today. new index file, re-did java added some new css too

--- a/index.html
+++ b/index.html
@@ -2,16 +2,86 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>About me</title>
+    <title>Max Johnson</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <h1>How Well Do You Know Me?</h1>
-    <p>Question One: Is Hockey the greatest sport?</p>
-    <p >Question Two: Is my favorite color yellow?</P>
-    <p>Question Three: Was I born in the 80s?</p>
-    <p>Question Four: If you do not finish first does that mean that you're last?</p>
-    <p>Question Five: It is friday night, everyone is out at the bar, do I join them?</p>
+    <h1>"But these go to eleven" -Nigel Tufnel</h1>
+    <h2>Welcome. You may already know who I am, but if not allow me to introduce myself. Buckle up, it might get a little bumpy.</h2>
+    <p class="jobHistory">Here's some basic information about myself. Just the essentials about me. We're going to knock out this boring stuff first then we'll get into some pretty fun stuff
+      <ul>
+        <li>Work history
+          <ul>
+            <li>Zumiez: 2<sup>nd</sup> assistant manager</li>
+            <li>gas station attendent/Car wash manager</li>
+            <li>Assistant serive manager Dodge Chrysler Jeep Ram SRT Fiat Alfa Romeo Maseratti </li>
+            <li>Delivery driver and 2<sup>nd</sup> assistant manager Dominos Pizza</li>
+          </ul>
+        </li>
+      </p>
+      <p class="SportsTeams">
+        <li>Favorite Sports Teams along with a few of my favorite players from each team (psst all the teams are from the same sport. can you guess what it is)
+        <ol>
+          <li>Pittsburg Penguins
+            <ul>
+              <li>#84 Sydney Crosby</li>
+              <li>#58 Kris Letang</li>
+            </ul>
+          </li>
+          <li>Chicago Blackhawks
+            <ul>
+              <li>#19 Jonathan Toews</li>
+              <li>#88 Patrick Kane</li>
+            </ul>
+          </li>
+          <li>Boston Bruins
+            <ul>
+              <li>#33 Zdeno Chara</li>
+              <li>#63 Brad Marchand</li>
+            </ul>
+          </li>
+          <li>New York Rangers
+          <ul>
+            <li>#30 Henrik Lundqvist</li>
+            <li>#26 Martin St. Louis(most career on tampa bay lightning, retired as a ranger though)</li>
+          </ul>
+        </li>
+        </ol>
+      </li>
+      </ul>
+    </p>
+    <p class="Homestead">It is rare that anybody can accurate guess what my age is, I imagine the bear makes me look older but I have had a beard since about 5<sup>th</sup> grade. I was born on June 6<sup>th</sup> 1992. Lived in the greater seattle area my entire life, most of it spent in kirkland, but have lived in bothell and lynnwood as well. Never been out of the country, no canada doesnt count as going to a different country, vancouver is basically a Seattle that says 'Eh' and 'aboot'. I dont plan on leaving this place anytime soon. </p>
+    <p>I love two types of moies more than any other styles out there. Heres just a few of my favorites
+      <ol>
+        <li>Mocumentaries
+          <ul>
+            <li>This Is SpinalTap</li>
+            <li>BlackBalled: The Bobby Dukes Story</li>
+            <li>Never Been Thawed</li>
+            <li>Farce of the Penguins</li>
+            <li>The Delicate Art of Parking</li>
+          </ul>
+        </li>
+          <li>Dark Comedies
+            <ul>
+              <li>In Bruges</li>
+              <li>Seven Pyschopaths</li>
+              <li>The Lobster</li>
+              <li>Pulp Fiction</li>
+              <li>Burn After Reading</li>
+              <li>Being John Malkovich</li>
+            </ul>
+        </li>
+      </ol>
+
+    </p>
+    <p>It's time for the Max Johnson funfacts of the day!!!!!!!
+    <ol>
+      <li>I have been to every Wal-Mart in Washington. and did it in a weekend, just to prove a point.</li>
+      <li>I can drive in reverse better than most people can while in drive (yes, it was put to the test at the track in monroe)</li>
+      <li>Have tried multiple years in a row to get pepsico, specific Mtn Dew to sponse our 'DEW-Pocalyspe'party every year. Keep getting rejected but keep trying every year.  DEW-Pocalypse 2012: Dewin' it 'till the end, DEW-Pocalypse 2013: Lets DEW this again, DEW-Fest 2014: We're DEWin' it again, Dew-fest 2015: LETS DEW IT!!! DEW-magedon 2016: DEW you know what time it is? DEW TIME!. I am determined to one day have it funded by MTN DEW. 
+    </ol>
+    </p>
   </body>
-<script src="app.js"></script> -->
+<!--<script src="app.js"></script> -->
 </html>
