--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
         </li>
       </p>
       <p class="SportsTeams">
-        <li>Favorite Sports Teams along with a few of my favorite players from each team (psst all the teams are from the same sport. can you guess what it is)
+        <li>Favorite Sports Teams along with a few of my favorite players from each team <br />(psst all the teams are from the same sport. can you guess what it is)
         <ol>
-          <li>Pittsburg Penguins
+          <li><b>Pittsburg Penguins</b>
             <ul>
               <li>#84 Sydney Crosby</li>
               <li>#58 Kris Letang</li>
             </ul>
           </li>
-          <li>Chicago Blackhawks
+          <li><b>Chicago Blackhawks</b>
             <ul>
               <li>#19 Jonathan Toews</li>
               <li>#88 Patrick Kane</li>
             </ul>
           </li>
-          <li>Boston Bruins
+          <li><b>Boston Bruins</b>
             <ul>
               <li>#33 Zdeno Chara</li>
               <li>#63 Brad Marchand</li>
             </ul>
           </li>
-          <li>New York Rangers
+          <li><b>New York Rangers</b>
           <ul>
             <li>#30 Henrik Lundqvist</li>
             <li>#26 Martin St. Louis(most career on tampa bay lightning, retired as a ranger though)</li>
@@ -53,23 +53,23 @@
     <p class="Homestead">It is rare that anybody can accurate guess what my age is, I imagine the bear makes me look older but I have had a beard since about 5<sup>th</sup> grade. I was born on June 6<sup>th</sup> 1992. Lived in the greater seattle area my entire life, most of it spent in kirkland, but have lived in bothell and lynnwood as well. Never been out of the country, no canada doesnt count as going to a different country, vancouver is basically a Seattle that says 'Eh' and 'aboot'. I dont plan on leaving this place anytime soon. </p>
     <p>I love two types of moies more than any other styles out there. Heres just a few of my favorites
       <ol>
-        <li>Mocumentaries
+        <li><b>Mocumentaries</b>
           <ul>
-            <li>This Is SpinalTap</li>
+            <li><i>This Is SpinalTap</li>
             <li>BlackBalled: The Bobby Dukes Story</li>
             <li>Never Been Thawed</li>
             <li>Farce of the Penguins</li>
-            <li>The Delicate Art of Parking</li>
+            <li>The Delicate Art of Parking</i></li>
           </ul>
         </li>
-          <li>Dark Comedies
+          <li><b>Dark Comedies</b>
             <ul>
-              <li>In Bruges</li>
+              <li><i>In Bruges</li>
               <li>Seven Pyschopaths</li>
               <li>The Lobster</li>
               <li>Pulp Fiction</li>
               <li>Burn After Reading</li>
-              <li>Being John Malkovich</li>
+              <li>Being John Malkovich</i></li>
             </ul>
         </li>
       </ol>
@@ -80,8 +80,7 @@
       <li>I have been to every Wal-Mart in Washington. and did it in a weekend, just to prove a point.</li>
       <li>I can drive in reverse better than most people can while in drive (yes, it was put to the test at the track in monroe)</li>
       <li>Have tried multiple years in a row to get pepsico, specific Mtn Dew to sponse our 'DEW-Pocalyspe'party every year. Keep getting rejected but keep trying every year.  DEW-Pocalypse 2012: Dewin' it 'till the end, DEW-Pocalypse 2013: Lets DEW this again, DEW-Fest 2014: We're DEWin' it again, Dew-fest 2015: LETS DEW IT!!! DEW-magedon 2016: DEW you know what time it is? DEW TIME!. I am determined to one day have it funded by MTN DEW.</li>
-      <li>In my free time my favorite thing to do is go to a Wal-Mart and people watch, the later at the night better. That is when the really "interesting" people come out.
-        <target 
+      <li>In my free time my favorite thing to do is go to a Wal-Mart and people watch, the later at the night better. That is when the really "interesting" people come out. Here's and example of the  <a href="http://www.peopleofwalmart.com/" target="_blank">people</a> you can see</li>
     </ol>
     </p>
   </body>
