cleaned up html doc and made changes mostly cleaned u[ java too

--- a/index.html
+++ b/index.html
@@ -19,36 +19,13 @@
           </ul>
         </li>
       </p>
-      <p class="SportsTeams">
-        <li>Favorite Sports Teams along with a few of my favorite players from each team <br />(psst all the teams are from the same sport. can you guess what it is)
+      <p class="SportsTeams">Favorite Sports Teams<br />(psst all the teams are from the same sport. can you guess what it is)
         <ol>
-          <li><b>Pittsburg Penguins</b>
-            <ul>
-              <li>#84 Sydney Crosby</li>
-              <li>#58 Kris Letang</li>
-            </ul>
-          </li>
-          <li><b>Chicago Blackhawks</b>
-            <ul>
-              <li>#19 Jonathan Toews</li>
-              <li>#88 Patrick Kane</li>
-            </ul>
-          </li>
-          <li><b>Boston Bruins</b>
-            <ul>
-              <li>#33 Zdeno Chara</li>
-              <li>#63 Brad Marchand</li>
-            </ul>
-          </li>
-          <li><b>New York Rangers</b>
-          <ul>
-            <li>#30 Henrik Lundqvist</li>
-            <li>#26 Martin St. Louis(most career on tampa bay lightning, retired as a ranger though)</li>
-          </ul>
-        </li>
+          <li><b>Pittsburg Penguins</b></li>
+          <li><b>Chicago Blackhawks</b></li>
+          <li><b>Boston Bruins</b></li>
+          <li><b>New York Rangers</b></li>
         </ol>
-      </li>
-      </ul>
     </p>
     <p class="Homestead">It is rare that anybody can accurate guess what my age is, I imagine the bear makes me look older but I have had a beard since about 5<sup>th</sup> grade. I was born on June 6<sup>th</sup> 1992. Lived in the greater seattle area my entire life, most of it spent in kirkland, but have lived in bothell and lynnwood as well. Never been out of the country, no canada doesnt count as going to a different country, vancouver is basically a Seattle that says 'Eh' and 'aboot'. I dont plan on leaving this place anytime soon. </p>
     <p>I love two types of moies more than any other styles out there. Heres just a few of my favorites
