commiting updated files

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </ol>
     </p>
     <p class="Homestead">It is rare that anybody can accurate guess what my age is, I imagine the bear makes me look older but I have had a beard since about 5<sup>th</sup> grade. I was born on June 6<sup>th</sup> 1992. Lived in the greater seattle area my entire life, most of it spent in kirkland, but have lived in bothell and lynnwood as well. Never been out of the country, no canada doesnt count as going to a different country, vancouver is basically a Seattle that says 'Eh' and 'aboot'. I dont plan on leaving this place anytime soon. </p>
-    <p>I love two types of moies more than any other styles out there. Heres just a few of my favorites
+    <p class="FavMovie">I love two types of moies more than any other styles out there. Heres just a few of my favorites
       <ol>
         <li><b>Mocumentaries</b>
           <ul>
