--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
   <body>
     <h1>"But these go to eleven" -Nigel Tufnel</h1>
     <h2>Welcome. You may already know who I am, but if not allow me to introduce myself. Buckle up, it might get a little bumpy.</h2>
-    <p class="jobHistory">Here's some basic information about myself. Just the essentials about me. We're going to knock out this boring stuff first then we'll get into some pretty fun stuff
+    <article class="jobHistory"><h3>Here's some basic information about myself. Just the essentials about me. We're going to knock out this boring stuff first then we'll get into some pretty fun stuff</h3>
       <ul>
-        <li>Work history
-          <ul>
+        <li id="title">Work history
+          <ul id="work">
             <li>Zumiez: 2<sup>nd</sup> assistant manager</li>
             <li>gas station attendent/Car wash manager</li>
             <li>Assistant serive manager Dodge Chrysler Jeep Ram SRT Fiat Alfa Romeo Maseratti </li>
             <li>Delivery driver and 2<sup>nd</sup> assistant manager Dominos Pizza</li>
           </ul>
         </li>
-      </p>
-      <p class="SportsTeams">Favorite Sports Teams<br />(psst all the teams are from the same sport. can you guess what it is)
+      </article>
+      <article class="SportsTeams"><h3>Favorite Sports Teams<br />(psst all the teams are from the same sport. can you guess what it is)</h3>
         <ol>
           <li><b>Pittsburg Penguins</b></li>
           <li><b>Chicago Blackhawks</b></li>
           <li><b>Boston Bruins</b></li>
           <li><b>New York Rangers</b></li>
         </ol>
-    </p>
-    <p class="Homestead">It is rare that anybody can accurate guess what my age is, I imagine the bear makes me look older but I have had a beard since about 5<sup>th</sup> grade. I was born on June 6<sup>th</sup> 1992. Lived in the greater seattle area my entire life, most of it spent in kirkland, but have lived in bothell and lynnwood as well. Never been out of the country, no canada doesnt count as going to a different country, vancouver is basically a Seattle that says 'Eh' and 'aboot'. I dont plan on leaving this place anytime soon. </p>
-    <p class="FavMovie">I love two types of moies more than any other styles out there. Heres just a few of my favorites
-      <ol>
-        <li><b>Mocumentaries</b>
-          <ul>
+    </article>
+    <article class="Homestead"><h3>It is rare that anybody can accurate guess what my age is, I imagine the bear makes me look older but I have had a beard since about 5<sup>th</sup> grade. I was born on June 6<sup>th</sup> 1992. Lived in the greater seattle area my entire life, most of it spent in kirkland, but have lived in bothell and lynnwood as well. Never been out of the country, no canada doesnt count as going to a different country, vancouver is basically a Seattle that says 'Eh' and 'aboot'. I dont plan on leaving this place anytime soon.</h3> </article>
+    <article class="FavMovie"><h3>I love two types of moies more than any other styles out there. Heres just a few of my favorites</h3>
+      <ul>
+        <li id="title"><b>Mocumentaries</b>
+          <ul id="films">
             <li><i>This Is SpinalTap</li>
             <li>BlackBalled: The Bobby Dukes Story</li>
             <li>Never Been Thawed</li>
@@ -39,8 +39,8 @@
             <li>The Delicate Art of Parking</i></li>
           </ul>
         </li>
-          <li><b>Dark Comedies</b>
-            <ul>
+          <li id="title"><b>Dark Comedies</b>
+            <ul id="films">
               <li><i>In Bruges</li>
               <li>Seven Pyschopaths</li>
               <li>The Lobster</li>
@@ -49,17 +49,17 @@
               <li>Being John Malkovich</i></li>
             </ul>
         </li>
-      </ol>
-
-    </p>
-    <p>It's time for the Max Johnson funfacts of the day!!!!!!!
-    <ol>
+      </ul>
+    </article>
+    <article class="funFacts"><h3>It's time for the Max Johnson funfacts of the day!!!!!!!</h3>
+    <ol id="facts">
       <li>I have been to every Wal-Mart in Washington. and did it in a weekend, just to prove a point.</li>
       <li>I can drive in reverse better than most people can while in drive (yes, it was put to the test at the track in monroe)</li>
       <li>Have tried multiple years in a row to get pepsico, specific Mtn Dew to sponse our 'DEW-Pocalyspe'party every year. Keep getting rejected but keep trying every year.  DEW-Pocalypse 2012: Dewin' it 'till the end, DEW-Pocalypse 2013: Lets DEW this again, DEW-Fest 2014: We're DEWin' it again, Dew-fest 2015: LETS DEW IT!!! DEW-magedon 2016: DEW you know what time it is? DEW TIME!. I am determined to one day have it funded by MTN DEW.</li>
       <li>In my free time my favorite thing to do is go to a Wal-Mart and people watch, the later at the night better. That is when the really "interesting" people come out. Here's and example of the  <a href="http://www.peopleofwalmart.com/" target="_blank">people</a> you can see</li>
     </ol>
-    </p>
+  </ul>
+  </article>
   </body>
-<script src="app.js"></script>
+<!-- <script src="app.js"></script> -->
 </html>
